--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,7 @@
     <title>Library</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/69d34191f6.js" crossorigin="anonymous"></script>
+    <script src="Index.js"></script>
 </head>
 <body>
     <section id="landing">
@@ -17,6 +18,22 @@
                 <li><a href="#" class="nav__link">Contact</a></li>
                 <li><a href="#" class="nav__link nav__link--primary">Books</a></li>
             </ul>
+            <button class="btn__menu" onclick="openMenu()">
+                <i class="fa-solid fa-bars"></i>
+            </button>
+            <div class="menu__backdrop">
+                <button class="btn__menu btn__menu--close" onclick="closeMenu()">
+                    <i class="fa-solid fa-times"></i>
+                </button>
+                <ul class="menu__links">
+                    <li class="menu__list"><a href="#" class="menu__link" onclick="closeMenu()">Home</a>
+                    </li>
+                    <li class="menu__list"><a href="#features" class="menu__link" onclick="closeMenu()">Books</a>
+                    </li>
+                    <li class="menu__list"><a href="#" class="menu__link no-cursor" onclick="closeMenu()">Contact</a>
+                    </li>
+                </ul>
+            </div>
             </div>
         </nav>
         <header>
@@ -24,7 +41,9 @@
                 <div class="header__description">
                     <h1>America's most awarded online library platform</h1>
                     <h2>Find your dream book with <span class= "purple">Library</span></h2>
-                    <button class="btn">Browse books</button>
+                    <a href="#features">
+                        <button class="btn">Browse books</button>
+                    </a>
                 </div>
                 <figure class="header__img--wrapper">
                     <img src="./assets/Undraw_Books.svg" alt="">
